<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ecole"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_25"
        android:paddingLeft="@dimen/padding_20"
        android:paddingRight="@dimen/padding_20"
        android:layout_weight="1"
        android:gravity="center|top"
        android:orientation="vertical">

        <ImageView
            android:layout_width="351dp"
            android:layout_height="153dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_25"
            android:background="@drawable/logo_accueil"
            android:contentDescription="@string/accueil_image"
            android:scaleType="fitStart" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_25"
        android:layout_weight="1"
        android:background="@color/ecole"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center_horizontal"
            android:paddingEnd="10dp"
            android:text="@string/adresse"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center_horizontal"
            android:paddingEnd="10dp"
            android:text="@string/lachute_qc_j8h_1w9"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center_horizontal"
            android:paddingEnd="10dp"
            android:text="@string/téléphone"
            android:textColor="#000000"
            android:textSize="18sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center_horizontal"
            android:paddingRight="10dp"
            android:text="Fax : 450-565-8422"
            android:textColor="#000000"
            android:textSize="18sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/iv_youtube"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:srcCompat="@drawable/youtube_social_squircle_red" />

            <ImageView
                android:id="@+id/iv_facebook"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginLeft="30dp"
                app:srcCompat="@drawable/facebook_icon" />

            <ImageView
                android:id="@+id/iv_instagram"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginLeft="30dp"
                app:srcCompat="@drawable/instagram_icon" />


        </LinearLayout>


    </LinearLayout>


</LinearLayout>


